# poetry-nixtemplate

./: .editorconfig  .envrc  .gitignore  default.nix  devshell.toml  flake.nix  pyproject.toml  treefmt.toml
