[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = [
  "SnO2WMaN <me@sno2wman.net>",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
include = '\.pyi?$'

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
